RESOLVED FIXED96167
Javascript in foreground tabs should not wait synchronously for plug-ins to load
https://bugs.webkit.org/show_bug.cgi?id=96167
Summary Javascript in foreground tabs should not wait synchronously for plug-ins to load
Brady Eidson
Reported 2012-09-07 17:35:49 PDT
When asynchronous plug-in initialization is enabled, javascript in foreground tabs should not wait synchronously for plug-ins to load. Even with synchronous initialization we already do this in background tabs that have never been viewed and therefore whose plug-ins have never been instantiated. In radar as <rdar://problem/12067415>
Attachments
Patch v1 - Fix + regression test (12.19 KB, patch)
2012-09-07 17:46 PDT, Brady Eidson
ggaren: review+
Brady Eidson
Comment 1 2012-09-07 17:46:16 PDT
Created attachment 162920 [details] Patch v1 - Fix + regression test
Geoffrey Garen
Comment 2 2012-09-09 14:06:01 PDT
Comment on attachment 162920 [details] Patch v1 - Fix + regression test r=me
Brady Eidson
Comment 3 2012-09-10 12:08:07 PDT
Note You need to log in before you can comment on or make changes to this bug.